--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Roms1383/emissary/issues"
   },
-  "homepage": "https://github.com/Roms1383/emissary#readme"
+  "homepage": "https://github.com/Roms1383/emissary#readme",
+  "dependencies": {
+    "@octokit/graphql": "^5.0.0",
+    "@octokit/rest": "^19.0.3"
+  }
 }
