--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,3 +17,18 @@ jobs:
 
       - name: run tests
         run: npm test -- --ci
+  analyze:
+    name: Reply to PR review from Commit"
+    runs-on: ubuntu-latest
+    needs: unit-tests
+
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
+      - name: setup NodeJS
+        uses: dcodeIO/setup-node-nvm@master
+
+      - name: install dependencies
+        run: npm install
+      - name: run tests
+        run: npm start
