--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,3 +32,5 @@ jobs:
         run: npm install
       - name: run tests
         run: npm start
+        with:
+          EVENT: ${{ github.event }}
