--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/Roms1383/emissary#readme",
   "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
     "@octokit/rest": "^19.0.3"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "jest": "^28.1.3",
     "prettier": "2.7.1"
   }
