--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,5 +32,5 @@ jobs:
         run: npm install
       - name: run tests
         run: npm start
-        with:
+        env:
           EVENT: ${{ github.event }}
