--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: run tests
         run: npm test -- --ci
   analyze:
-    name: Reply to PR review from Commit"
+    name: Reply to PR review from Commit
     runs-on: ubuntu-latest
     needs: unit-tests
 
@@ -30,7 +30,7 @@ jobs:
 
       - name: install dependencies
         run: npm install
-      - name: run tests
+      - name: run action
         run: npm start
         env:
-          EVENT: ${{ github.event }}
+          EVENT: '${{ github.event }}'
