--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/checkout@v2
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
+        with:
+          node-version: "16.16.0"
 
       - name: install dependencies
         run: npm ci
@@ -30,6 +32,8 @@ jobs:
         uses: actions/checkout@v2
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
+        with:
+          node-version: "16.16.0"
 
       - name: install dependencies
         run: npm install
