--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           node-version: "16.16.0"
 
       - name: install dependencies
-        run: npm install
+        run: npm ci
       - name: run action
         run: npm start
         env:
