--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
         with:
-          node-version: read -r line < .nvmrc
+          node-version: $(read -r line < .nvmrc)
 
       - name: install dependencies
         run: npm ci
@@ -33,7 +33,7 @@ jobs:
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
         with:
-          node-version: read -r line < .nvmrc
+          node-version: $(read -r line < .nvmrc)
 
       - name: install dependencies
         run: npm ci
