--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,10 +12,13 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+      - name: read .nvmrc
+        id: nvmrc
+        run: echo "::set-output name=version::$(read -r line < .nvmrc)"
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
         with:
-          node-version: $(read -r line < .nvmrc)
+          node-version: ${{ steps.nvmrc.outputs.version }}
 
       - name: install dependencies
         run: npm ci
@@ -30,10 +33,13 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v2
+      - name: read .nvmrc
+        id: nvmrc
+        run: echo "::set-output name=version::$(read -r line < .nvmrc)"
       - name: setup NodeJS
         uses: dcodeIO/setup-node-nvm@master
         with:
-          node-version: $(read -r line < .nvmrc)
+          node-version: ${{ steps.nvmrc.outputs.version }}
 
       - name: install dependencies
         run: npm ci
