--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
     "@octokit/rest": "^19.0.3",
-    "chalk": "^5.0.1"
+    "chalk": "4.1.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
