--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "@actions/core": "^1.9.0",
     "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
-    "@octokit/rest": "^19.0.3",
-    "chalk": "4.1.2"
+    "@octokit/rest": "^19.0.3"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
