--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@actions/core": "^1.9.0",
     "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
-    "@octokit/rest": "^19.0.3"
+    "@octokit/rest": "^19.0.3",
+    "boxen": "^5.1.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
