--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: run tests
         run: npm test -- --ci
-  analyze:
+  action:
     name: Reply to PR review from Commit
     runs-on: ubuntu-latest
     needs: unit-tests
