--- a/package.json
+++ b/package.json
@@ -22,10 +22,9 @@
     "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
     "@octokit/rest": "^19.0.3",
-    "boxen": "^5.1.2"
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
-    "dotenv": "^16.0.1",
     "jest": "^28.1.3",
     "prettier": "2.7.1"
   }
