--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple Github Action to comment on pull request discussions from commits messages",
   "main": "index.js",
   "scripts": {
-    "test": "npm run test"
+    "test": "GITHUB_TOKEN='00000' GITHUB_REPOSITORY='Roms1383/emissary' GITHUB_EVENT_PATH='./tests/fixtures/actionTrigger.json' jest",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,11 @@
   },
   "homepage": "https://github.com/Roms1383/emissary#readme",
   "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@octokit/core": "^4.0.4",
     "@octokit/graphql": "^5.0.0",
-    "@octokit/rest": "^19.0.3"
+    "@octokit/rest": "^19.0.3",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "jest": "^28.1.3",
