--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,3 +42,26 @@ jobs:
         run: npm start
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  tag:
+    name: Semantic versioning
+    runs-on: ubuntu-latest
+    needs: action
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v2
+      - name: setup NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+      - name: Automatically tag next version
+        uses: paulhatch/semantic-version@v4.0.2
+        with:
+          tag_prefix: "v"
+          major_pattern: "(MAJOR)"
+          minor_pattern: "(MINOR)"
+          change_path: "src"
+          namespace: emissary
+          bump_each_commit: false
+          search_commit_body: true
+          user_format_type: "csv"
+
