:wrench: update action usage in CI
reply discussion 940089338 something like this maybe ?

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,4 +39,5 @@ jobs:
       - name: install dependencies
         run: npm ci
       - name: run action
-        run: npm start
+        uses: ./
+        id: emissary
