--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,5 @@
-name: "Emissary"
+name: Emissary
 description: "Comment on Pull Review Request Changes from Commit"
 runs:
-  using: "docker"
-  image: "Dockerfile"
+  using: node16
+  main: dist/index.js
