:rewind: looks like token is required
reply discussion 940089338 something like this maybe ?

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,3 +41,5 @@ jobs:
       - name: run action
         uses: ./
         id: emissary
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
