--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,11 +13,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.release.tag_name }}
-          
       - name: setup NodeJS
         uses: actions/setup-node@v2
         with:
           node-version-file: '.nvmrc'
+      - name: install dependencies
+        run: npm ci
 
       - uses: JasonEtco/build-and-tag-action@v2
         env:
