--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: Emissary
-description: "Comment on Pull Review Request Changes from Commit"
+name: 'Emissary'
+description: 'Comment on Pull Review Request Changes from Commit'
 runs:
   using: node16
   main: dist/index.js
