--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple Github Action to comment on pull request discussions from commits messages",
   "main": "dist/index.js",
   "scripts": {
+    "lint": "prettier --write .",
     "test": "GITHUB_TOKEN='00000' GITHUB_REPOSITORY='Roms1383/emissary' jest --coverage",
     "start": "node dist/index.js",
     "prestart": "npm run prepare",
