--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Automatically tag next version
         uses: paulhatch/semantic-version@v5.0.0-alpha2
         with:
-          tag_prefix: 'v'
+          tag_prefix: 'rc'
           major_pattern: '(MAJOR)'
           minor_pattern: '(MINOR)'
           bump_each_commit: false
