:green_heart: improve release flow
so semantic version action will look at releases prefixed with 'rc', but produce link for release prefix with 'v'
then Publish workflow will only run for releases prefixed with 'v'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,3 +30,4 @@ jobs:
           bump_each_commit: false
           search_commit_body: true
           user_format_type: 'csv'
+          format: "v${major}.${minor}.${patch}"
