--- a/action.yml
+++ b/action.yml
@@ -10,3 +10,7 @@ inputs:
   token:
     description: 'Github Token'
     required: true
+  dry-run:
+    description: 'Execute action without replying or resolving any pull request review thread'
+    default: 'false'
+    required: false
