--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,4 +49,4 @@ jobs:
         id: emissary
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          dry-run: 'false'
+          dry-run: 'true'
