--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: run tests
         run: npm test -- --ci
+      - name: upload coverage to Codecov
+        uses: codecov/codecov-action@v3
   action:
     name: Reply to PR review from Commit
     runs-on: ubuntu-latest
