--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,27 @@ jobs:
         id: emissary
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+  readme:
+    name: Update readme
+    runs-on: ubuntu-latest
+    needs: action
+    if: github.event.ref == format('refs/heads/{0}', github.event.repository.master_branch)
+
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v3
+      - name: setup NodeJS
+        uses: actions/setup-node@v2
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: install dependencies
+        run: npm ci
+      - name: auto update readme
+        uses: bitflight-devops/github-action-readme-generator@main
+        with:
+          action: 'action.yml'
+          version_enabled: true
+          versioning_prefix: 'v'
+          versioning_branch: github.event.repository.master_branch
+          pretty: true
