--- a/action.yaml
+++ b/action.yaml
@@ -1,7 +1,7 @@
 # this duplicate declaration should be removed as soon as action can be published to Github Marketplace
 # with `action.yml` extension
 name: 'emissary-action'
-description: 'Comment on Pull Request Review Requesting Changes from Commit'
+description: 'This Github Action allows your contributors to resolve requested changes from a pull request review thread directly from their commit message.'
 branding:
   icon: check-square
   color: green
