--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
     name: Update readme
     runs-on: ubuntu-latest
     needs: unit-tests
-    if: github.event.ref == format('refs/heads/{0}', github.event.repository.master_branch)
+    # if: github.event.ref == format('refs/heads/{0}', github.event.repository.master_branch)
 
     steps:
       - name: checkout repository
