--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
         run: npm test -- --ci
       - name: upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          flags: unittest
   action:
     name: Reply to PR review from Commit
     runs-on: ubuntu-latest
